kubernetes/global.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-wordpress

# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: monitoring
