kubernetes/mysql.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: my-wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
