kubernetes/wordpress.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: my-wordpress
spec:
  rules:
  - host: website.local
    http:
      paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: 80
